Table with role presentation should expose cells as generic containers

When screen readers traverse a <table role="presentation">, they need
generic container objects in place of the cells, to help them understand
and present formatted content. Specifically, this helps present the text
without jamming it together, as well as providing line breaks.

Bug: 787664
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I53b691f0ccae3f4090ca0f8ecfcbeb622bd3dfeb
Reviewed-on: https://chromium-review.googlesource.com/887599
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533202}
Former-commit-id: 112c7d585aab4bffd99773897731d3df996cab4e